works, css needs tweaking tho

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,7 @@ PORT=3000
 
 # Optional parameters
 CHUTES_BASE_URL=https://api.chutes.ai
+
+TAO_REC_ADDRESS="5Hq3foT3rBKfDB2Py8jVrDvg3yPUeFEdWqwwKKnih5fqCS9X"
+BTC_REC_ADDRESS="bc1qne2mffgcjwk4f5lnffs6gcmu63rwskl3yadtkp"
+LTC_REC_ADDRESS="ltc1q3z327a3ea22mlhtawmdjxmwn69n65a32fek2s4"
