--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chutes-models-enhanced",
+  "name": "chutes-11",
   "version": "1.0.0",
   "description": "Enhanced Chutes AI Model Explorer with complete API access",
   "main": "server.js",
